# qualcomm_compute_demo

./: README.md  build.gradle  local.properties
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
src/main/cpp/include/: hetcompute_dsp.h
src/main/cpp/include/hetcompute/: exceptions.hh
src/main/cpp/include/hetcompute/internal/task/: group.hh  task.hh
src/main/java/com/yw/agaDemo/: UnityPlayerActivity.java  UnityPlayerNativeActivity.java  UnityPlayerProxyActivity.java
src/main/res/values/: strings.xml  styles.xml
